feat: 简历相关增加接口
